--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <script>
     async function carregarPlanilhaCSV() {
-      const url = "https://docs.google.com/spreadsheets/d/e/2PACX-1vSlFRpBHlrOcNxYjeM8dAnA-WdSRal1gRQIvplcWayT0XbhYlUzJKak0OXPJkMhtvkYbc5xV4OLW1tB/pub?output=csv";
+      const url = "https://docs.google.com/spreadsheets/d/e/2PACX-1vSlFRpBHlrOcNxYjeM8dAnA-WdSRal1gRQIvplcWayT0XbhYlUzJKak0OXPJkMhtvkYbc5xV4OLW1tB/pub?gid=0&single=true&output=csv";
 
       try {
         const response = await fetch(url);
