--- a/index.html
+++ b/index.html
@@ -7,6 +7,67 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <header class="navbar">
+        <div class="inner-content">
+            <div class="navbar-logo">
+                <a href="http://viacaorealita.com.br/">
+                    <img src="logo.real.svg" alt="Logo R.E.A.L">
+                </a>
+            </div>
+
+            <button class="hamburger-menu" aria-label="Abrir Menu">
+                <span class="hamburger-icon"></span>
+                <span class="hamburger-icon"></span>
+                <span class="hamburger-icon"></span>
+            </button>
+
+            <nav class="navbar-links">
+                <ul>
+                    <li><a href="http://viacaorealita.com.br/">HOME</a></li>
+                    <li class="dropdown">
+                        <a href="#">EMPRESA <span class="dropdown-arrow">&#9660;</span></a>
+                        <ul class="submenu">
+                            <li><a href="http://viacaorealita.com.br/sobre.php">História</a></li>
+                            <li><a href="http://viacaorealita.com.br/sobre.php?valores">Missão, Visão e Valores</a></li>
+                            </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#">SERVIÇOS <span class="dropdown-arrow">&#9660;</span></a>
+                        <ul class="submenu">
+                            <li><a href="http://viacaorealita.com.br/encomendas/">Encomendas</a></li>
+                            <li><a href="http://viacaorealita.com.br/turismo/">Turismo e freteamento</a></li>
+                            <li><a href="http://viacaorealita.com.br/locacao/">Locacao</a></li>
+                            </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#">AGÊNCIAS <span class="dropdown-arrow">&#9660;</span></a>
+                        <ul class="submenu">
+                            <li><a href="http://viacaorealita.com.br/servicos.cidades.php">Cidades atendidas</a></li>
+                            <li><a href="http://viacaorealita.com.br/servicos.agencias.php">Pontos de atendimento</a></li>
+                            </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#">INFORMAÇÕES <span class="dropdown-arrow">&#9660;</span></a>
+                        <ul class="submenu">
+                            <li><a href="http://viacaorealita.com.br/informacoes.achados.php">Achados e perdidos</a></li>
+                            <li><a href="http://viacaorealita.com.br/informacoes.bagagem.php">Bagagem</a></li>
+                            <li><a href="http://viacaorealita.com.br/informacoes.cancelamento.php">Cancelamento/reembolso de passagem</a></li>
+                            <li><a href="http://viacaorealita.com.br/informacoes.dicas.php">Dicas de viagem</a></li>
+                            <li><a href="http://viacaorealita.com.br/informacoes.direitos.php">Direitos e deveres</a></li>
+                            <li><a href="http://viacaorealita.com.br/informacoes.gratuidade.php">Gratuidade de passagem</a></li>
+                            <li><a href="http://viacaorealita.com.br/informacoes.remarcacao.php">Remarcacao de passagem</a></li>
+                            <li><a href="http://viacaorealita.com.br/informacoes.transporte.php">Transporte de animais</a></li>
+                            <li><a href="http://viacaorealita.com.br/informacoes.troca.php">Troca de passagem</a></li>
+                            <li><a href="http://viacaorealita.com.br/informacoes.menor.php">Viagem com menor</a></li>
+                            </ul>
+                    </li>
+                    <li><a href="http://viacaorealita.com.br/contato.php">FALE CONOSCO</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
     <div class="container">
         <h1>Busca de Rotas de Ônibus</h1>
 
